@startuml

entity "data_types"{
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    description : text
    scala : varchar(255) <<not null>>
    typescript: varchar(255) <<not null>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}


entity "data_fields" {
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    description : text
    datatype_id : int <<FK>>
    pattern : varchar(255)
    max_length : int
    min_length : int
    required : boolean <<not null>>
    format : varchar(255)
    schema : jsonb <<not null>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "content_elements" {
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    description : text
    field_id : int <<FK>>
    control_name : varchar(255) <<not null>>
    schema : jsonb <<not null>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}


entity "content_groups" {
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    description : text
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}


entity "content_element_groups" {
    id : int <<PK>>
    ---
    content_element_id : int <<FK>>
    content_group_id : int <<FK>>
    name: varchar(255) <<not null>>
    orderFlag : int
    schema : jsonb <<not null>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}


entity "categories" {
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    description : text
    meta_data : jsonb
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "content_types" {
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    description : text
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "content_definitions" {
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    description : text
    content_element_groups_id : int <<FK>>
    orderFlag: int
    container: boolean <<not null>>
    children_types: 
    comment: text
    schema : jsonb <<not null>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "nodes" {
    id : int <<PK>>
    ---
    parent_id : int <<FK -> nodes>>
    node_type : varchar(20) <<not null>>
    path : ltree <<not null>> <<unique>>
    sort_order : int <<not null>> DEFAULT 0
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "folders" {
    id : int <<PK>>
    ---
    node_id : int <<FK -> nodes>> <<unique>>
    name : varchar(255) <<not null>>
    description : text
    meta_data : jsonb
    icon : varchar(255)
    category_id : int <<FK>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "content" {
    id : int <<PK>>
    ---
    node_id : int <<FK -> nodes>> <<unique>>
    content_definition_id : int <<FK -> content_definitions>>
    title : varchar(255) <<not null>>
    description : text
    meta_data : jsonb
    data : jsonb
    category_id : int <<FK>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "allowed_children" {
    id : int <<PK>>
    ---
    parent_definition_id : int <<FK -> content_definitions>>
    child_definition_id : int <<FK -> content_definitions>>
    max_count : int
    min_count : int DEFAULT 0
    sort_order : int DEFAULT 0
    UNIQUE(parent_definition_id child_definition_id)
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "folder_allowed_children" {
    id : int <<PK>>
    ---
    -- both nullable but exactly one must be set
    allowed_definition_id : int <<FK -> content_definitions>>
    allow_folders : boolean DEFAULT false
    allow_all_content : boolean DEFAULT false
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "content_tags" {
    id : int <<PK>>
    ---
    content_id : int <<FK>>
    tag_id : int <<FK>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}


entity "tags" {
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    content_tag_id: int <<FK>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "media_types" {
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    description : text
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "media" {
    id : int <<PK>>
    ---
    name : varchar(255) <<not null>>
    description : text
    media_type_id : int <<FK>>
    url : varchar(255) <<not null>>
    mime_type : varchar(255) <<not null>>
    status_id : int <<FK -> status>>
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

entity "status" {
    id : int <<PK>>}
    ---
    name : varchar(255) <<not null>>
    description : text
    version : int <<not null>>
    created_at : timestamptz <<not null>>
    updated_at : timestamptz
    created_by : varchar(255) <<not null>>
    updated_by : varchar(255)
}

"data_types" ||--o{ "data_fields" : has
"data_fields" ||--o{ "content_elements" : has
"content_elements" ||--o{ "content_element_groups" : has
"content_groups" ||--o{ "content_element_groups" : has
"content_element_groups" ||--o{ "content_definitions" : has
"content_definitions" ||--o{ "content_types" : has
"content_definitions" ||--o{ "allowed_children" : has
"content_definitions" ||--o{ "folder_allowed_children" : has
"content_types" ||--o{ "content_definitions" : has
"categories" ||--o{ "folders" : has
"categories" ||--o{ "content" : has
"nodes" ||--o{ "folders" : has
"nodes" ||--o{ "content" : has
"content" ||--o{ "content_tags" : has
"tags" ||--o{ "content_tags" : has
"media_types" ||--o{ "media" : has
"status" ||--o{ "data_types" : has
"status" ||--o{ "data_fields" : has
"status" ||--o{ "content_elements" : has
"status" ||--o{ "content_element_groups" : has
"status" ||--o{ "content_groups" : has
"status" ||--o{ "content_definitions" : has
"status" ||--o{ "content_types" : has
"status" ||--o{ "allowed_children" : has
"status" ||--o{ "folder_allowed_children" : has
"status" ||--o{ "categories" : has
"status" ||--o{ "folders" : has
"status" ||--o{ "content" : has
"status" ||--o{ "content_tags" : has has
"status" ||--o{ "tags" : has
"status" ||--o{ "media_types" : has
"status" ||--o{ "media" : has

@enduml
